data/derived/comb/progs/unify/prog0251.ml.out
Characters 82-86:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int -> int
       Type int is not compatible with type int -> int 
